--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
+    "@tosspayments/payment-widget-sdk": "^0.10.1",
+    "@tosspayments/widget-sdk-react-native": "^1.1.0",
     "firebase": "^10.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
