--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.0.7",
     "styled-reset": "^4.5.1"
   },
