--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "firebase deploy"
   },
   "dependencies": {
+    "expo-av": "^13.6.0",
     "firebase": "^10.7.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
